# compliance_one

./: CMakeLists.txt  Compliance One Issues List 2024 03 04.xlsx  Field Requirements 2023 03 25.xlsx  README.md  address.hpp  addresse_spec.hpp  company.hpp  company_group.hpp  company_type.hpp  company_view.hpp  compliance_one.hpp  compliance_one.sql  contact.hpp  counterparty_group.hpp  counterparty_type.hpp  country.hpp  coutry.hpp  ctp_group.hpp  ctp_type.hpp  ctrl_macro.cpp  exchange.hpp  exchange.sql  individual.hpp  individual_view.hpp  jurisdiction.hpp  jurisdiction.sql  main.cpp  main.qml  product.hpp  product_group.hpp  region.hpp  regulator.hpp  regulator.sql  sanctions_spec.hpp  sovereignty.hpp  transparency_international.sql  user.hpp  vessel.hpp
.github/workflows/: cmake-multi-platform.yml  windows.yml
ci/: installScript.qs
interface/: bridge.hpp  net_manager.hpp
resources/: compliance_one.qrc
resources/icons/: compliance_one.rc
resources/ui/: AddressChooser.qml  CompanyDelegate.qml  CompanyPage.qml  CompanyTypeDelegate.qml  ContatChooser.qml  CountryChooser.qml  CountryDelegate.qml  CtpTypeDelegate.qml  DateDialog.qml  EnumValueChooser.qml  EnumValueEditor.qml  ExchangeDelegate.qml  HomePage.qml  HomeStack.qml  IndividualDelegate.qml  IndividualPage.qml  LabeledTextArea.qml  LabeledTextField.qml  ListSearchPage.qml  LogInDialog.qml  PhoneChooser.qml  ProductDelegate.qml  RegulatorDelegate.qml  SearchBar.qml  SettingsDrawer.qml  VesselDelegate.qml  VesselPage.qml  main.qml
resources/ui/choosers/: AddressChooser.qml  ContatChooser.qml  CountryChooser.qml  EnumIntChooser.qml  EnumValueChooser.qml  EnumValueEditor.qml  JuisdicionChooser.qml  JurisdicionChooser.qml  PhoneChooser.qml
resources/ui/delegates/: CompanyDelegate.qml  CompanyTypeDelegate.qml  CountryDelegate.qml  ExchangeDelegate.qml  ProductDelegate.qml  RegulatorDelegate.qml  VesselDelegate.qml
resources/ui/dialogs/: BusyPopup.qml  ExceptionDialog.qml  LogInDialog.qml
resources/ui/pages/: CompanyPage.qml  HomePage.qml  HomeStack.qml  IndividualPage.qml  ListSearchPage.qml  VesselPage.qml
resources/ui/utils/: FilterSaveRemove.qml  InvisibleCombo.qml  LabeledDateField.qml  LabeledTextField.qml  PwdField.qml  QueuedSaveRemove.qml  SettingsDrawer.qml
ressources/: compliance_one.qrc
ressources/ui/: AddressChooser.qml  BusyDialog.qml  CompanyDelegate.qml  CompanyPage.qml  ContatChooser.qml  CountryDelegate.qml  CtpTypeDelegate.qml  DateDialog.qml  DateField.qml  EnumChooser.qml  EnumIntChooser.qml  EnumValueChooser.qml  EnumValueEditor.qml  ExceptionDialog.qml  FlickableItem.qml  FloatChooser.qml  IndividualDelegate.qml  IndividualPage.qml  IntChooser.qml  LabeledDateField.qml  LabeledTextArea.qml  LabeledTextField.qml  LogInDialog.qml  LoggInDialog.qml  PhoneChooser.qml  QcompanyDelegate.qml  QcontactDelegate.qml  QcountryDelegate.qml  QctpTypeDelegate.qml  QindividualPage.qml  QproductDelegate.qml  QsovereigntyDelegate.qml  SettingsDrawer.qml  VesselDelegate.qml  main.qml
visitors/: json_reader.hpp
wrappers/: controller.hpp  list.hpp  list_model.hpp  model.hpp  utils.hpp
